# agency-data-tools

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  package.json  pnpm-lock.yaml
.github/workflows/: deploy.yml
docs/: flight-sql-plan.md  index.html  phase-1-flight-server.md  phase-2-browser-client.md
flight-server/: .gitignore  Cargo.toml  README.md  start.sh
flight-server/public/: build.js  index.html  package.json  server.mjs
flight-server/public/src/: app.js
flight-server/src/: main.rs
ingest/: Cargo.toml
ingest/examples/: sort_parquet.rs
ingest/src/: main.rs
query/: .gitignore  index.html  server.cjs  wren_core_wasm.d.ts  wren_core_wasm.js
scripts/: setup-env.sh
test-data/: sample.csv  sample.parquet
wasm-query/: .gitignore  Cargo.toml  start.sh
wasm-query/src/: lib.rs
wasm-query/www/: debug-chunks.html  index.html  wasm_query.d.ts  wasm_query.js  wasm_query_bg.wasm.d.ts
