[package]
name = "fannie-ingest"
version = "0.1.0"
edition = "2024"

[dependencies]
datafusion = { version = "47", features = ["parquet"] }
tokio = { version = "1", features = ["full"] }
object_store = { version = "0.12", features = ["aws"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1"
dotenvy = "0.15"
url = "2"
