[package]
name = "wasm-query"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
datafusion = { version = "54", default-features = false, features = ["sql", "parquet"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
tokio = { version = "1", features = ["rt", "macros"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
console_error_panic_hook = "0.1"
